--- a/ClientFileUpload/.classpath
+++ b/ClientFileUpload/.classpath
@@ -6,7 +6,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="src/main/resource"/>
+	<classpathentry excluding="fxml/image/|image/" kind="src" path="src/main/resource"/>
 	<classpathentry kind="src" output="target/classes" path="src/main/java">
 		<attributes>
 			<attribute name="optional" value="true"/>
